// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date-picker/utils dateToIndex works when date equals maximumDate and greater than minimumDate 1`] = `5`;

exports[`date-picker/utils dateToIndex works when date equals minimumDate and less than maximumDate 1`] = `0`;

exports[`date-picker/utils dateToIndex works when date equals minimumDate and maximumDate 1`] = `0`;

exports[`date-picker/utils dateToIndex works when date is between maximumDate and minimumDate 1`] = `2`;

exports[`date-picker/utils dateToIndex works when date is greater than maximumDate and minimumDate 1`] = `5`;

exports[`date-picker/utils dateToIndex works when date is less than maximumDate and minimumDate 1`] = `0`;

exports[`date-picker/utils indexesToValues works for 0:00 in 1 min en 1`] = `
Object {
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils indexesToValues works for 0:00 in 5 min fr 1`] = `
Object {
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils indexesToValues works for 0:00 in 10 min ru 1`] = `
Object {
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils indexesToValues works for 0:03 in 1 min en 1`] = `
Object {
  "hours": 0,
  "minutes": 3,
}
`;

exports[`date-picker/utils indexesToValues works for 0:03 in 5 min fr 1`] = `
Object {
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils indexesToValues works for 0:03 in 10 min ru 1`] = `
Object {
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils indexesToValues works for 1:10 in 1 min en 1`] = `
Object {
  "hours": 1,
  "minutes": 10,
}
`;

exports[`date-picker/utils indexesToValues works for 1:10 in 5 min fr 1`] = `
Object {
  "hours": 1,
  "minutes": 10,
}
`;

exports[`date-picker/utils indexesToValues works for 1:10 in 10 min ru 1`] = `
Object {
  "hours": 1,
  "minutes": 10,
}
`;

exports[`date-picker/utils indexesToValues works for 6:31 in 1 min en 1`] = `
Object {
  "hours": 6,
  "minutes": 31,
}
`;

exports[`date-picker/utils indexesToValues works for 6:31 in 5 min fr 1`] = `
Object {
  "hours": 6,
  "minutes": 30,
}
`;

exports[`date-picker/utils indexesToValues works for 6:31 in 10 min ru 1`] = `
Object {
  "hours": 6,
  "minutes": 30,
}
`;

exports[`date-picker/utils indexesToValues works for 11:55 in 1 min en 1`] = `
Object {
  "hours": 11,
  "minutes": 55,
}
`;

exports[`date-picker/utils indexesToValues works for 11:55 in 5 min fr 1`] = `
Object {
  "hours": 11,
  "minutes": 55,
}
`;

exports[`date-picker/utils indexesToValues works for 11:55 in 10 min ru 1`] = `
Object {
  "hours": 11,
  "minutes": 50,
}
`;

exports[`date-picker/utils indexesToValues works for 12:00 in 1 min en 1`] = `
Object {
  "hours": 12,
  "minutes": 0,
}
`;

exports[`date-picker/utils indexesToValues works for 12:00 in 5 min fr 1`] = `
Object {
  "hours": 12,
  "minutes": 0,
}
`;

exports[`date-picker/utils indexesToValues works for 12:00 in 10 min ru 1`] = `
Object {
  "hours": 12,
  "minutes": 0,
}
`;

exports[`date-picker/utils indexesToValues works for 12:03 in 1 min en 1`] = `
Object {
  "hours": 12,
  "minutes": 3,
}
`;

exports[`date-picker/utils indexesToValues works for 12:03 in 5 min fr 1`] = `
Object {
  "hours": 12,
  "minutes": 0,
}
`;

exports[`date-picker/utils indexesToValues works for 12:03 in 10 min ru 1`] = `
Object {
  "hours": 12,
  "minutes": 0,
}
`;

exports[`date-picker/utils indexesToValues works for 18:31 in 1 min en 1`] = `
Object {
  "hours": 18,
  "minutes": 31,
}
`;

exports[`date-picker/utils indexesToValues works for 18:31 in 5 min fr 1`] = `
Object {
  "hours": 18,
  "minutes": 30,
}
`;

exports[`date-picker/utils indexesToValues works for 18:31 in 10 min ru 1`] = `
Object {
  "hours": 18,
  "minutes": 30,
}
`;

exports[`date-picker/utils indexesToValues works for 23:55 in 1 min en 1`] = `
Object {
  "hours": 23,
  "minutes": 55,
}
`;

exports[`date-picker/utils indexesToValues works for 23:55 in 5 min fr 1`] = `
Object {
  "hours": 23,
  "minutes": 55,
}
`;

exports[`date-picker/utils indexesToValues works for 23:55 in 10 min ru 1`] = `
Object {
  "hours": 23,
  "minutes": 50,
}
`;

exports[`date-picker/utils makeAmList works 1`] = `
Array [
  Object {
    "title": "AM",
    "value": 0,
  },
  Object {
    "title": "PM",
    "value": 12,
  },
]
`;

exports[`date-picker/utils makeDateList works for fr 1`] = `
Array [
  Object {
    "title": "mer. oct. 10",
    "value": Object {
      "date": 10,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "jeu. oct. 11",
    "value": Object {
      "date": 11,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "TODAY",
    "value": Object {
      "date": 12,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "sam. oct. 13",
    "value": Object {
      "date": 13,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "dim. oct. 14",
    "value": Object {
      "date": 14,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "lun. oct. 15",
    "value": Object {
      "date": 15,
      "month": 9,
      "year": 2018,
    },
  },
]
`;

exports[`date-picker/utils makeDateList works when TODAY equals maximumDate and greater than minimumDate 1`] = `
Array [
  Object {
    "title": "Wed Oct 10",
    "value": Object {
      "date": 10,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Thu Oct 11",
    "value": Object {
      "date": 11,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Fri Oct 12",
    "value": Object {
      "date": 12,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Sat Oct 13",
    "value": Object {
      "date": 13,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Sun Oct 14",
    "value": Object {
      "date": 14,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "TODAY",
    "value": Object {
      "date": 15,
      "month": 9,
      "year": 2018,
    },
  },
]
`;

exports[`date-picker/utils makeDateList works when TODAY equals minimumDate and less than maximumDate 1`] = `
Array [
  Object {
    "title": "TODAY",
    "value": Object {
      "date": 10,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Thu Oct 11",
    "value": Object {
      "date": 11,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Fri Oct 12",
    "value": Object {
      "date": 12,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Sat Oct 13",
    "value": Object {
      "date": 13,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Sun Oct 14",
    "value": Object {
      "date": 14,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Mon Oct 15",
    "value": Object {
      "date": 15,
      "month": 9,
      "year": 2018,
    },
  },
]
`;

exports[`date-picker/utils makeDateList works when TODAY is between minimumDate and maximumDate 1`] = `
Array [
  Object {
    "title": "Wed Oct 10",
    "value": Object {
      "date": 10,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Thu Oct 11",
    "value": Object {
      "date": 11,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "TODAY",
    "value": Object {
      "date": 12,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Sat Oct 13",
    "value": Object {
      "date": 13,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Sun Oct 14",
    "value": Object {
      "date": 14,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Mon Oct 15",
    "value": Object {
      "date": 15,
      "month": 9,
      "year": 2018,
    },
  },
]
`;

exports[`date-picker/utils makeDateList works when maximumDate equals minimumDate and doesn't equal TODAY 1`] = `
Array [
  Object {
    "title": "Wed Oct 10",
    "value": Object {
      "date": 10,
      "month": 9,
      "year": 2018,
    },
  },
]
`;

exports[`date-picker/utils makeDateList works when maximumDate equals minimumDate equals TODAY 1`] = `
Array [
  Object {
    "title": "TODAY",
    "value": Object {
      "date": 10,
      "month": 9,
      "year": 2018,
    },
  },
]
`;

exports[`date-picker/utils makeDateList works when minimumDate and maximumDate are in Feb and Mar 1`] = `
Array [
  Object {
    "title": "Tue Feb 26",
    "value": Object {
      "date": 26,
      "month": 1,
      "year": 2019,
    },
  },
  Object {
    "title": "Wed Feb 27",
    "value": Object {
      "date": 27,
      "month": 1,
      "year": 2019,
    },
  },
  Object {
    "title": "Thu Feb 28",
    "value": Object {
      "date": 28,
      "month": 1,
      "year": 2019,
    },
  },
  Object {
    "title": "Fri Mar 1",
    "value": Object {
      "date": 1,
      "month": 2,
      "year": 2019,
    },
  },
  Object {
    "title": "Sat Mar 2",
    "value": Object {
      "date": 2,
      "month": 2,
      "year": 2019,
    },
  },
]
`;

exports[`date-picker/utils makeDateList works when minimumDate and maximumDate are in adjacent months of the same year 1`] = `
Array [
  Object {
    "title": "Sat Oct 27",
    "value": Object {
      "date": 27,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Sun Oct 28",
    "value": Object {
      "date": 28,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Mon Oct 29",
    "value": Object {
      "date": 29,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Tue Oct 30",
    "value": Object {
      "date": 30,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Wed Oct 31",
    "value": Object {
      "date": 31,
      "month": 9,
      "year": 2018,
    },
  },
  Object {
    "title": "Thu Nov 1",
    "value": Object {
      "date": 1,
      "month": 10,
      "year": 2018,
    },
  },
  Object {
    "title": "Fri Nov 2",
    "value": Object {
      "date": 2,
      "month": 10,
      "year": 2018,
    },
  },
]
`;

exports[`date-picker/utils makeDateList works when minimumDate and maximumDate are in adjacent years 1`] = `
Array [
  Object {
    "title": "Fri Dec 28",
    "value": Object {
      "date": 28,
      "month": 11,
      "year": 2018,
    },
  },
  Object {
    "title": "Sat Dec 29",
    "value": Object {
      "date": 29,
      "month": 11,
      "year": 2018,
    },
  },
  Object {
    "title": "Sun Dec 30",
    "value": Object {
      "date": 30,
      "month": 11,
      "year": 2018,
    },
  },
  Object {
    "title": "Mon Dec 31",
    "value": Object {
      "date": 31,
      "month": 11,
      "year": 2018,
    },
  },
  Object {
    "title": "Tue Jan 1",
    "value": Object {
      "date": 1,
      "month": 0,
      "year": 2019,
    },
  },
  Object {
    "title": "Wed Jan 2",
    "value": Object {
      "date": 2,
      "month": 0,
      "year": 2019,
    },
  },
]
`;

exports[`date-picker/utils makeDateList works when minimumDate and maximumDate are in leap Feb and Mar 1`] = `
Array [
  Object {
    "title": "Wed Feb 26",
    "value": Object {
      "date": 26,
      "month": 1,
      "year": 2020,
    },
  },
  Object {
    "title": "Thu Feb 27",
    "value": Object {
      "date": 27,
      "month": 1,
      "year": 2020,
    },
  },
  Object {
    "title": "Fri Feb 28",
    "value": Object {
      "date": 28,
      "month": 1,
      "year": 2020,
    },
  },
  Object {
    "title": "Sat Feb 29",
    "value": Object {
      "date": 29,
      "month": 1,
      "year": 2020,
    },
  },
  Object {
    "title": "Sun Mar 1",
    "value": Object {
      "date": 1,
      "month": 2,
      "year": 2020,
    },
  },
  Object {
    "title": "Mon Mar 2",
    "value": Object {
      "date": 2,
      "month": 2,
      "year": 2020,
    },
  },
]
`;

exports[`date-picker/utils makeHoursList works for 24 with leading zeroes 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "01",
    "value": 1,
  },
  Object {
    "title": "02",
    "value": 2,
  },
  Object {
    "title": "03",
    "value": 3,
  },
  Object {
    "title": "04",
    "value": 4,
  },
  Object {
    "title": "05",
    "value": 5,
  },
  Object {
    "title": "06",
    "value": 6,
  },
  Object {
    "title": "07",
    "value": 7,
  },
  Object {
    "title": "08",
    "value": 8,
  },
  Object {
    "title": "09",
    "value": 9,
  },
  Object {
    "title": "10",
    "value": 10,
  },
  Object {
    "title": "11",
    "value": 11,
  },
  Object {
    "title": "12",
    "value": 12,
  },
  Object {
    "title": "13",
    "value": 13,
  },
  Object {
    "title": "14",
    "value": 14,
  },
  Object {
    "title": "15",
    "value": 15,
  },
  Object {
    "title": "16",
    "value": 16,
  },
  Object {
    "title": "17",
    "value": 17,
  },
  Object {
    "title": "18",
    "value": 18,
  },
  Object {
    "title": "19",
    "value": 19,
  },
  Object {
    "title": "20",
    "value": 20,
  },
  Object {
    "title": "21",
    "value": 21,
  },
  Object {
    "title": "22",
    "value": 22,
  },
  Object {
    "title": "23",
    "value": 23,
  },
]
`;

exports[`date-picker/utils makeHoursList works for 24 without leading zeroes 1`] = `
Array [
  Object {
    "title": "0",
    "value": 0,
  },
  Object {
    "title": "1",
    "value": 1,
  },
  Object {
    "title": "2",
    "value": 2,
  },
  Object {
    "title": "3",
    "value": 3,
  },
  Object {
    "title": "4",
    "value": 4,
  },
  Object {
    "title": "5",
    "value": 5,
  },
  Object {
    "title": "6",
    "value": 6,
  },
  Object {
    "title": "7",
    "value": 7,
  },
  Object {
    "title": "8",
    "value": 8,
  },
  Object {
    "title": "9",
    "value": 9,
  },
  Object {
    "title": "10",
    "value": 10,
  },
  Object {
    "title": "11",
    "value": 11,
  },
  Object {
    "title": "12",
    "value": 12,
  },
  Object {
    "title": "13",
    "value": 13,
  },
  Object {
    "title": "14",
    "value": 14,
  },
  Object {
    "title": "15",
    "value": 15,
  },
  Object {
    "title": "16",
    "value": 16,
  },
  Object {
    "title": "17",
    "value": 17,
  },
  Object {
    "title": "18",
    "value": 18,
  },
  Object {
    "title": "19",
    "value": 19,
  },
  Object {
    "title": "20",
    "value": 20,
  },
  Object {
    "title": "21",
    "value": 21,
  },
  Object {
    "title": "22",
    "value": 22,
  },
  Object {
    "title": "23",
    "value": 23,
  },
]
`;

exports[`date-picker/utils makeHoursList works for AM/PM 1`] = `
Array [
  Object {
    "title": "12",
    "value": 0,
  },
  Object {
    "title": "1",
    "value": 1,
  },
  Object {
    "title": "2",
    "value": 2,
  },
  Object {
    "title": "3",
    "value": 3,
  },
  Object {
    "title": "4",
    "value": 4,
  },
  Object {
    "title": "5",
    "value": 5,
  },
  Object {
    "title": "6",
    "value": 6,
  },
  Object {
    "title": "7",
    "value": 7,
  },
  Object {
    "title": "8",
    "value": 8,
  },
  Object {
    "title": "9",
    "value": 9,
  },
  Object {
    "title": "10",
    "value": 10,
  },
  Object {
    "title": "11",
    "value": 11,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 1 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "01",
    "value": 1,
  },
  Object {
    "title": "02",
    "value": 2,
  },
  Object {
    "title": "03",
    "value": 3,
  },
  Object {
    "title": "04",
    "value": 4,
  },
  Object {
    "title": "05",
    "value": 5,
  },
  Object {
    "title": "06",
    "value": 6,
  },
  Object {
    "title": "07",
    "value": 7,
  },
  Object {
    "title": "08",
    "value": 8,
  },
  Object {
    "title": "09",
    "value": 9,
  },
  Object {
    "title": "10",
    "value": 10,
  },
  Object {
    "title": "11",
    "value": 11,
  },
  Object {
    "title": "12",
    "value": 12,
  },
  Object {
    "title": "13",
    "value": 13,
  },
  Object {
    "title": "14",
    "value": 14,
  },
  Object {
    "title": "15",
    "value": 15,
  },
  Object {
    "title": "16",
    "value": 16,
  },
  Object {
    "title": "17",
    "value": 17,
  },
  Object {
    "title": "18",
    "value": 18,
  },
  Object {
    "title": "19",
    "value": 19,
  },
  Object {
    "title": "20",
    "value": 20,
  },
  Object {
    "title": "21",
    "value": 21,
  },
  Object {
    "title": "22",
    "value": 22,
  },
  Object {
    "title": "23",
    "value": 23,
  },
  Object {
    "title": "24",
    "value": 24,
  },
  Object {
    "title": "25",
    "value": 25,
  },
  Object {
    "title": "26",
    "value": 26,
  },
  Object {
    "title": "27",
    "value": 27,
  },
  Object {
    "title": "28",
    "value": 28,
  },
  Object {
    "title": "29",
    "value": 29,
  },
  Object {
    "title": "30",
    "value": 30,
  },
  Object {
    "title": "31",
    "value": 31,
  },
  Object {
    "title": "32",
    "value": 32,
  },
  Object {
    "title": "33",
    "value": 33,
  },
  Object {
    "title": "34",
    "value": 34,
  },
  Object {
    "title": "35",
    "value": 35,
  },
  Object {
    "title": "36",
    "value": 36,
  },
  Object {
    "title": "37",
    "value": 37,
  },
  Object {
    "title": "38",
    "value": 38,
  },
  Object {
    "title": "39",
    "value": 39,
  },
  Object {
    "title": "40",
    "value": 40,
  },
  Object {
    "title": "41",
    "value": 41,
  },
  Object {
    "title": "42",
    "value": 42,
  },
  Object {
    "title": "43",
    "value": 43,
  },
  Object {
    "title": "44",
    "value": 44,
  },
  Object {
    "title": "45",
    "value": 45,
  },
  Object {
    "title": "46",
    "value": 46,
  },
  Object {
    "title": "47",
    "value": 47,
  },
  Object {
    "title": "48",
    "value": 48,
  },
  Object {
    "title": "49",
    "value": 49,
  },
  Object {
    "title": "50",
    "value": 50,
  },
  Object {
    "title": "51",
    "value": 51,
  },
  Object {
    "title": "52",
    "value": 52,
  },
  Object {
    "title": "53",
    "value": 53,
  },
  Object {
    "title": "54",
    "value": 54,
  },
  Object {
    "title": "55",
    "value": 55,
  },
  Object {
    "title": "56",
    "value": 56,
  },
  Object {
    "title": "57",
    "value": 57,
  },
  Object {
    "title": "58",
    "value": 58,
  },
  Object {
    "title": "59",
    "value": 59,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 2 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "02",
    "value": 2,
  },
  Object {
    "title": "04",
    "value": 4,
  },
  Object {
    "title": "06",
    "value": 6,
  },
  Object {
    "title": "08",
    "value": 8,
  },
  Object {
    "title": "10",
    "value": 10,
  },
  Object {
    "title": "12",
    "value": 12,
  },
  Object {
    "title": "14",
    "value": 14,
  },
  Object {
    "title": "16",
    "value": 16,
  },
  Object {
    "title": "18",
    "value": 18,
  },
  Object {
    "title": "20",
    "value": 20,
  },
  Object {
    "title": "22",
    "value": 22,
  },
  Object {
    "title": "24",
    "value": 24,
  },
  Object {
    "title": "26",
    "value": 26,
  },
  Object {
    "title": "28",
    "value": 28,
  },
  Object {
    "title": "30",
    "value": 30,
  },
  Object {
    "title": "32",
    "value": 32,
  },
  Object {
    "title": "34",
    "value": 34,
  },
  Object {
    "title": "36",
    "value": 36,
  },
  Object {
    "title": "38",
    "value": 38,
  },
  Object {
    "title": "40",
    "value": 40,
  },
  Object {
    "title": "42",
    "value": 42,
  },
  Object {
    "title": "44",
    "value": 44,
  },
  Object {
    "title": "46",
    "value": 46,
  },
  Object {
    "title": "48",
    "value": 48,
  },
  Object {
    "title": "50",
    "value": 50,
  },
  Object {
    "title": "52",
    "value": 52,
  },
  Object {
    "title": "54",
    "value": 54,
  },
  Object {
    "title": "56",
    "value": 56,
  },
  Object {
    "title": "58",
    "value": 58,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 3 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "03",
    "value": 3,
  },
  Object {
    "title": "06",
    "value": 6,
  },
  Object {
    "title": "09",
    "value": 9,
  },
  Object {
    "title": "12",
    "value": 12,
  },
  Object {
    "title": "15",
    "value": 15,
  },
  Object {
    "title": "18",
    "value": 18,
  },
  Object {
    "title": "21",
    "value": 21,
  },
  Object {
    "title": "24",
    "value": 24,
  },
  Object {
    "title": "27",
    "value": 27,
  },
  Object {
    "title": "30",
    "value": 30,
  },
  Object {
    "title": "33",
    "value": 33,
  },
  Object {
    "title": "36",
    "value": 36,
  },
  Object {
    "title": "39",
    "value": 39,
  },
  Object {
    "title": "42",
    "value": 42,
  },
  Object {
    "title": "45",
    "value": 45,
  },
  Object {
    "title": "48",
    "value": 48,
  },
  Object {
    "title": "51",
    "value": 51,
  },
  Object {
    "title": "54",
    "value": 54,
  },
  Object {
    "title": "57",
    "value": 57,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 4 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "04",
    "value": 4,
  },
  Object {
    "title": "08",
    "value": 8,
  },
  Object {
    "title": "12",
    "value": 12,
  },
  Object {
    "title": "16",
    "value": 16,
  },
  Object {
    "title": "20",
    "value": 20,
  },
  Object {
    "title": "24",
    "value": 24,
  },
  Object {
    "title": "28",
    "value": 28,
  },
  Object {
    "title": "32",
    "value": 32,
  },
  Object {
    "title": "36",
    "value": 36,
  },
  Object {
    "title": "40",
    "value": 40,
  },
  Object {
    "title": "44",
    "value": 44,
  },
  Object {
    "title": "48",
    "value": 48,
  },
  Object {
    "title": "52",
    "value": 52,
  },
  Object {
    "title": "56",
    "value": 56,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 5 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "05",
    "value": 5,
  },
  Object {
    "title": "10",
    "value": 10,
  },
  Object {
    "title": "15",
    "value": 15,
  },
  Object {
    "title": "20",
    "value": 20,
  },
  Object {
    "title": "25",
    "value": 25,
  },
  Object {
    "title": "30",
    "value": 30,
  },
  Object {
    "title": "35",
    "value": 35,
  },
  Object {
    "title": "40",
    "value": 40,
  },
  Object {
    "title": "45",
    "value": 45,
  },
  Object {
    "title": "50",
    "value": 50,
  },
  Object {
    "title": "55",
    "value": 55,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 6 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "06",
    "value": 6,
  },
  Object {
    "title": "12",
    "value": 12,
  },
  Object {
    "title": "18",
    "value": 18,
  },
  Object {
    "title": "24",
    "value": 24,
  },
  Object {
    "title": "30",
    "value": 30,
  },
  Object {
    "title": "36",
    "value": 36,
  },
  Object {
    "title": "42",
    "value": 42,
  },
  Object {
    "title": "48",
    "value": 48,
  },
  Object {
    "title": "54",
    "value": 54,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 10 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "10",
    "value": 10,
  },
  Object {
    "title": "20",
    "value": 20,
  },
  Object {
    "title": "30",
    "value": 30,
  },
  Object {
    "title": "40",
    "value": 40,
  },
  Object {
    "title": "50",
    "value": 50,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 12 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "12",
    "value": 12,
  },
  Object {
    "title": "24",
    "value": 24,
  },
  Object {
    "title": "36",
    "value": 36,
  },
  Object {
    "title": "48",
    "value": 48,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 15 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "15",
    "value": 15,
  },
  Object {
    "title": "30",
    "value": 30,
  },
  Object {
    "title": "45",
    "value": 45,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 20 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "20",
    "value": 20,
  },
  Object {
    "title": "40",
    "value": 40,
  },
]
`;

exports[`date-picker/utils makeMinutesList works for every 30 minute 1`] = `
Array [
  Object {
    "title": "00",
    "value": 0,
  },
  Object {
    "title": "30",
    "value": 30,
  },
]
`;

exports[`date-picker/utils makeTimeLists works for 1 min en 1`] = `
Object {
  "am": Array [
    Object {
      "title": "AM",
      "value": 0,
    },
    Object {
      "title": "PM",
      "value": 12,
    },
  ],
  "hours": Array [
    Object {
      "title": "12",
      "value": 0,
    },
    Object {
      "title": "1",
      "value": 1,
    },
    Object {
      "title": "2",
      "value": 2,
    },
    Object {
      "title": "3",
      "value": 3,
    },
    Object {
      "title": "4",
      "value": 4,
    },
    Object {
      "title": "5",
      "value": 5,
    },
    Object {
      "title": "6",
      "value": 6,
    },
    Object {
      "title": "7",
      "value": 7,
    },
    Object {
      "title": "8",
      "value": 8,
    },
    Object {
      "title": "9",
      "value": 9,
    },
    Object {
      "title": "10",
      "value": 10,
    },
    Object {
      "title": "11",
      "value": 11,
    },
  ],
  "minutes": Array [
    Object {
      "title": "00",
      "value": 0,
    },
    Object {
      "title": "01",
      "value": 1,
    },
    Object {
      "title": "02",
      "value": 2,
    },
    Object {
      "title": "03",
      "value": 3,
    },
    Object {
      "title": "04",
      "value": 4,
    },
    Object {
      "title": "05",
      "value": 5,
    },
    Object {
      "title": "06",
      "value": 6,
    },
    Object {
      "title": "07",
      "value": 7,
    },
    Object {
      "title": "08",
      "value": 8,
    },
    Object {
      "title": "09",
      "value": 9,
    },
    Object {
      "title": "10",
      "value": 10,
    },
    Object {
      "title": "11",
      "value": 11,
    },
    Object {
      "title": "12",
      "value": 12,
    },
    Object {
      "title": "13",
      "value": 13,
    },
    Object {
      "title": "14",
      "value": 14,
    },
    Object {
      "title": "15",
      "value": 15,
    },
    Object {
      "title": "16",
      "value": 16,
    },
    Object {
      "title": "17",
      "value": 17,
    },
    Object {
      "title": "18",
      "value": 18,
    },
    Object {
      "title": "19",
      "value": 19,
    },
    Object {
      "title": "20",
      "value": 20,
    },
    Object {
      "title": "21",
      "value": 21,
    },
    Object {
      "title": "22",
      "value": 22,
    },
    Object {
      "title": "23",
      "value": 23,
    },
    Object {
      "title": "24",
      "value": 24,
    },
    Object {
      "title": "25",
      "value": 25,
    },
    Object {
      "title": "26",
      "value": 26,
    },
    Object {
      "title": "27",
      "value": 27,
    },
    Object {
      "title": "28",
      "value": 28,
    },
    Object {
      "title": "29",
      "value": 29,
    },
    Object {
      "title": "30",
      "value": 30,
    },
    Object {
      "title": "31",
      "value": 31,
    },
    Object {
      "title": "32",
      "value": 32,
    },
    Object {
      "title": "33",
      "value": 33,
    },
    Object {
      "title": "34",
      "value": 34,
    },
    Object {
      "title": "35",
      "value": 35,
    },
    Object {
      "title": "36",
      "value": 36,
    },
    Object {
      "title": "37",
      "value": 37,
    },
    Object {
      "title": "38",
      "value": 38,
    },
    Object {
      "title": "39",
      "value": 39,
    },
    Object {
      "title": "40",
      "value": 40,
    },
    Object {
      "title": "41",
      "value": 41,
    },
    Object {
      "title": "42",
      "value": 42,
    },
    Object {
      "title": "43",
      "value": 43,
    },
    Object {
      "title": "44",
      "value": 44,
    },
    Object {
      "title": "45",
      "value": 45,
    },
    Object {
      "title": "46",
      "value": 46,
    },
    Object {
      "title": "47",
      "value": 47,
    },
    Object {
      "title": "48",
      "value": 48,
    },
    Object {
      "title": "49",
      "value": 49,
    },
    Object {
      "title": "50",
      "value": 50,
    },
    Object {
      "title": "51",
      "value": 51,
    },
    Object {
      "title": "52",
      "value": 52,
    },
    Object {
      "title": "53",
      "value": 53,
    },
    Object {
      "title": "54",
      "value": 54,
    },
    Object {
      "title": "55",
      "value": 55,
    },
    Object {
      "title": "56",
      "value": 56,
    },
    Object {
      "title": "57",
      "value": 57,
    },
    Object {
      "title": "58",
      "value": 58,
    },
    Object {
      "title": "59",
      "value": 59,
    },
  ],
}
`;

exports[`date-picker/utils makeTimeLists works for 5 min fr 1`] = `
Object {
  "am": false,
  "hours": Array [
    Object {
      "title": "00",
      "value": 0,
    },
    Object {
      "title": "01",
      "value": 1,
    },
    Object {
      "title": "02",
      "value": 2,
    },
    Object {
      "title": "03",
      "value": 3,
    },
    Object {
      "title": "04",
      "value": 4,
    },
    Object {
      "title": "05",
      "value": 5,
    },
    Object {
      "title": "06",
      "value": 6,
    },
    Object {
      "title": "07",
      "value": 7,
    },
    Object {
      "title": "08",
      "value": 8,
    },
    Object {
      "title": "09",
      "value": 9,
    },
    Object {
      "title": "10",
      "value": 10,
    },
    Object {
      "title": "11",
      "value": 11,
    },
    Object {
      "title": "12",
      "value": 12,
    },
    Object {
      "title": "13",
      "value": 13,
    },
    Object {
      "title": "14",
      "value": 14,
    },
    Object {
      "title": "15",
      "value": 15,
    },
    Object {
      "title": "16",
      "value": 16,
    },
    Object {
      "title": "17",
      "value": 17,
    },
    Object {
      "title": "18",
      "value": 18,
    },
    Object {
      "title": "19",
      "value": 19,
    },
    Object {
      "title": "20",
      "value": 20,
    },
    Object {
      "title": "21",
      "value": 21,
    },
    Object {
      "title": "22",
      "value": 22,
    },
    Object {
      "title": "23",
      "value": 23,
    },
  ],
  "minutes": Array [
    Object {
      "title": "00",
      "value": 0,
    },
    Object {
      "title": "05",
      "value": 5,
    },
    Object {
      "title": "10",
      "value": 10,
    },
    Object {
      "title": "15",
      "value": 15,
    },
    Object {
      "title": "20",
      "value": 20,
    },
    Object {
      "title": "25",
      "value": 25,
    },
    Object {
      "title": "30",
      "value": 30,
    },
    Object {
      "title": "35",
      "value": 35,
    },
    Object {
      "title": "40",
      "value": 40,
    },
    Object {
      "title": "45",
      "value": 45,
    },
    Object {
      "title": "50",
      "value": 50,
    },
    Object {
      "title": "55",
      "value": 55,
    },
  ],
}
`;

exports[`date-picker/utils makeTimeLists works for 10 min ru 1`] = `
Object {
  "am": false,
  "hours": Array [
    Object {
      "title": "0",
      "value": 0,
    },
    Object {
      "title": "1",
      "value": 1,
    },
    Object {
      "title": "2",
      "value": 2,
    },
    Object {
      "title": "3",
      "value": 3,
    },
    Object {
      "title": "4",
      "value": 4,
    },
    Object {
      "title": "5",
      "value": 5,
    },
    Object {
      "title": "6",
      "value": 6,
    },
    Object {
      "title": "7",
      "value": 7,
    },
    Object {
      "title": "8",
      "value": 8,
    },
    Object {
      "title": "9",
      "value": 9,
    },
    Object {
      "title": "10",
      "value": 10,
    },
    Object {
      "title": "11",
      "value": 11,
    },
    Object {
      "title": "12",
      "value": 12,
    },
    Object {
      "title": "13",
      "value": 13,
    },
    Object {
      "title": "14",
      "value": 14,
    },
    Object {
      "title": "15",
      "value": 15,
    },
    Object {
      "title": "16",
      "value": 16,
    },
    Object {
      "title": "17",
      "value": 17,
    },
    Object {
      "title": "18",
      "value": 18,
    },
    Object {
      "title": "19",
      "value": 19,
    },
    Object {
      "title": "20",
      "value": 20,
    },
    Object {
      "title": "21",
      "value": 21,
    },
    Object {
      "title": "22",
      "value": 22,
    },
    Object {
      "title": "23",
      "value": 23,
    },
  ],
  "minutes": Array [
    Object {
      "title": "00",
      "value": 0,
    },
    Object {
      "title": "10",
      "value": 10,
    },
    Object {
      "title": "20",
      "value": 20,
    },
    Object {
      "title": "30",
      "value": 30,
    },
    Object {
      "title": "40",
      "value": 40,
    },
    Object {
      "title": "50",
      "value": 50,
    },
  ],
}
`;

exports[`date-picker/utils normalizeDate works when date equals maximumDate and greater than minimumDate 1`] = `2018-10-15T05:00:00.000Z`;

exports[`date-picker/utils normalizeDate works when date equals minimumDate and less than maximumDate 1`] = `2018-10-10T05:00:00.000Z`;

exports[`date-picker/utils normalizeDate works when date equals minimumDate equals maximumDate 1`] = `2018-10-10T05:00:00.000Z`;

exports[`date-picker/utils normalizeDate works when date is between maximumDate and minimumDate 1`] = `2018-10-12T05:00:00.000Z`;

exports[`date-picker/utils normalizeDate works when date is greater than maximumDate 1`] = `2018-10-15T05:00:00.000Z`;

exports[`date-picker/utils normalizeDate works when date is less than minimumDate 1`] = `2018-10-10T05:00:00.000Z`;

exports[`date-picker/utils normalizeMinMaxDates works when both minimumDate and maximumDate are not provided 1`] = `
Object {
  "maximumDate": 2019-10-10T04:59:59.999Z,
  "minimumDate": 2018-10-10T05:00:00.000Z,
}
`;

exports[`date-picker/utils normalizeMinMaxDates works when maximumDate is not provided 1`] = `
Object {
  "maximumDate": 2019-10-15T04:59:59.999Z,
  "minimumDate": 2018-10-15T05:00:00.000Z,
}
`;

exports[`date-picker/utils normalizeMinMaxDates works when minimumDate equals maximumDate 1`] = `
Object {
  "maximumDate": 2018-10-10T05:00:00.000Z,
  "minimumDate": 2018-10-10T05:00:00.000Z,
}
`;

exports[`date-picker/utils normalizeMinMaxDates works when minimumDate is grater than maximumDate 1`] = `
Object {
  "maximumDate": 2019-10-10T04:59:59.999Z,
  "minimumDate": 2018-10-10T05:00:00.000Z,
}
`;

exports[`date-picker/utils normalizeMinMaxDates works when minimumDate is not provided and maximumDate earlier than given date 1`] = `
Object {
  "maximumDate": 2018-10-01T05:00:00.000Z,
  "minimumDate": 2017-10-02T05:00:00.000Z,
}
`;

exports[`date-picker/utils normalizeMinMaxDates works when minimumDate is not provided and maximumDate later than given date 1`] = `
Object {
  "maximumDate": 2018-10-20T05:00:00.000Z,
  "minimumDate": 2018-10-10T05:00:00.000Z,
}
`;

exports[`date-picker/utils normalizeMinMaxDates works when minimumDate less than maximumDate 1`] = `
Object {
  "maximumDate": 2018-10-15T05:00:00.000Z,
  "minimumDate": 2018-10-10T05:00:00.000Z,
}
`;

exports[`date-picker/utils timeToIndexes works for 0:00 in 1 min en 1`] = `
Object {
  "am": 0,
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils timeToIndexes works for 0:00 in 5 min fr 1`] = `
Object {
  "am": -1,
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils timeToIndexes works for 0:00 in 10 min ru 1`] = `
Object {
  "am": -1,
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils timeToIndexes works for 0:03 in 1 min en 1`] = `
Object {
  "am": 0,
  "hours": 0,
  "minutes": 3,
}
`;

exports[`date-picker/utils timeToIndexes works for 0:03 in 5 min fr 1`] = `
Object {
  "am": -1,
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils timeToIndexes works for 0:03 in 10 min ru 1`] = `
Object {
  "am": -1,
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils timeToIndexes works for 1:10 in 1 min en 1`] = `
Object {
  "am": 0,
  "hours": 1,
  "minutes": 10,
}
`;

exports[`date-picker/utils timeToIndexes works for 1:10 in 5 min fr 1`] = `
Object {
  "am": -1,
  "hours": 1,
  "minutes": 2,
}
`;

exports[`date-picker/utils timeToIndexes works for 1:10 in 10 min ru 1`] = `
Object {
  "am": -1,
  "hours": 1,
  "minutes": 1,
}
`;

exports[`date-picker/utils timeToIndexes works for 6:31 in 1 min en 1`] = `
Object {
  "am": 0,
  "hours": 6,
  "minutes": 31,
}
`;

exports[`date-picker/utils timeToIndexes works for 6:31 in 5 min fr 1`] = `
Object {
  "am": -1,
  "hours": 6,
  "minutes": 6,
}
`;

exports[`date-picker/utils timeToIndexes works for 6:31 in 10 min ru 1`] = `
Object {
  "am": -1,
  "hours": 6,
  "minutes": 3,
}
`;

exports[`date-picker/utils timeToIndexes works for 11:55 in 1 min en 1`] = `
Object {
  "am": 0,
  "hours": 11,
  "minutes": 55,
}
`;

exports[`date-picker/utils timeToIndexes works for 11:55 in 5 min fr 1`] = `
Object {
  "am": -1,
  "hours": 11,
  "minutes": 11,
}
`;

exports[`date-picker/utils timeToIndexes works for 11:55 in 10 min ru 1`] = `
Object {
  "am": -1,
  "hours": 11,
  "minutes": 5,
}
`;

exports[`date-picker/utils timeToIndexes works for 12:00 in 1 min en 1`] = `
Object {
  "am": 1,
  "hours": 0,
  "minutes": 0,
}
`;

exports[`date-picker/utils timeToIndexes works for 12:00 in 5 min fr 1`] = `
Object {
  "am": -1,
  "hours": 12,
  "minutes": 0,
}
`;

exports[`date-picker/utils timeToIndexes works for 12:00 in 10 min ru 1`] = `
Object {
  "am": -1,
  "hours": 12,
  "minutes": 0,
}
`;

exports[`date-picker/utils timeToIndexes works for 12:03 in 1 min en 1`] = `
Object {
  "am": 1,
  "hours": 0,
  "minutes": 3,
}
`;

exports[`date-picker/utils timeToIndexes works for 12:03 in 5 min fr 1`] = `
Object {
  "am": -1,
  "hours": 12,
  "minutes": 0,
}
`;

exports[`date-picker/utils timeToIndexes works for 12:03 in 10 min ru 1`] = `
Object {
  "am": -1,
  "hours": 12,
  "minutes": 0,
}
`;

exports[`date-picker/utils timeToIndexes works for 18:31 in 1 min en 1`] = `
Object {
  "am": 1,
  "hours": 6,
  "minutes": 31,
}
`;

exports[`date-picker/utils timeToIndexes works for 18:31 in 5 min fr 1`] = `
Object {
  "am": -1,
  "hours": 18,
  "minutes": 6,
}
`;

exports[`date-picker/utils timeToIndexes works for 18:31 in 10 min ru 1`] = `
Object {
  "am": -1,
  "hours": 18,
  "minutes": 3,
}
`;

exports[`date-picker/utils timeToIndexes works for 23:55 in 1 min en 1`] = `
Object {
  "am": 1,
  "hours": 11,
  "minutes": 55,
}
`;

exports[`date-picker/utils timeToIndexes works for 23:55 in 5 min fr 1`] = `
Object {
  "am": -1,
  "hours": 23,
  "minutes": 11,
}
`;

exports[`date-picker/utils timeToIndexes works for 23:55 in 10 min ru 1`] = `
Object {
  "am": -1,
  "hours": 23,
  "minutes": 5,
}
`;
